--- a/package.json
+++ b/package.json
@@ -130,9 +130,9 @@
     "watch": "parallelshell 'npm run doc:watch' 'npm run prepublish:watch' 'npm run serve'"
   },
   "dependencies": {
+    "@economist/component-grid": "^1.3.0",
     "@economist/component-palette": "^1.2.0",
-    "react-click-outside": "^2.1.0",
-    "react-dom": "^0.14.3"
+    "react-click-outside": "^2.1.0"
   },
   "devDependencies": {
     "@economist/component-devpack": "^3.4.3",
@@ -167,7 +167,8 @@
     "watchify": "^3.4.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   },
   "pre-commit": [
     "lint"
