--- a/package.json
+++ b/package.json
@@ -168,8 +168,7 @@
     "watchify": "^3.4.0"
   },
   "peerDependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^0.14.3"
   },
   "pre-commit": [
     "lint"
