--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@economist/component-balloon",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "A balloon that can expose content when an click happens",
   "author": "The Economist (http://economist.com)",
   "license": "LicenseRef-LICENSE",
@@ -165,10 +165,12 @@
     "pre-commit": "^1.0.10",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
+    "react-dom": "^0.14.3",
     "watchify": "^3.4.0"
   },
   "peerDependencies": {
-    "react": "^0.14.3"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   },
   "pre-commit": [
     "lint"
