--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@economist/component-balloon",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A balloon that can expose content when an click happens",
   "author": "The Economist (http://economist.com)",
-  "license": "LicenseRef-LICENSE",
+  "license": "MIT",
   "repository": "git@github.com:economist-components/component-balloon.git",
   "homepage": "https://github.com/economist-components/component-balloon/wiki",
   "bugs": "https://github.com/economist-components/component-balloon/issues",
