--- a/package.json
+++ b/package.json
@@ -131,8 +131,9 @@
   },
   "dependencies": {
     "@economist/component-grid": "^1.3.0",
-    "@economist/component-palette": "^1.2.0",
     "@economist/component-link-button": "^2.0.0",
+    "@economist/component-palette": "^1.2.0",
+    "classnames": "^2.2.3",
     "react-click-outside": "^2.1.0"
   },
   "devDependencies": {
