fix: stop `pretest` from failing if `doc` hasn't been run prior

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "postpublish": "npm run access",
     "semantic-release": "semantic-release pre || exit 0; npm publish && semantic-release post",
     "start": "npm run watch",
-    "pretest": "npm run lint && npm run doc:js",
+    "pretest": "npm run lint && npm run doc",
     "test": "karma start",
     "test:watch": "npm run test:base -- -wR min",
     "watch": "npm-run-all --parallel watch:*",
