--- a/package.json
+++ b/package.json
@@ -131,8 +131,8 @@
   },
   "devDependencies": {
     "@economist/component-typography": "^1.5.0",
-    "@economist/doc-pack": "^1.0.0",
-    "@economist/provision-react-component": "1.3.4",
+    "@economist/doc-pack": "^1.0.5",
+    "@economist/provision-react-component": "^1.3.7",
     "babel": "^5.8.34",
     "babel-eslint": "^5.0.0",
     "babelify": "^6.4.0",
@@ -151,6 +151,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.1",
     "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.2.0",
     "karma-sauce-launcher": "^0.3.0",
     "live-server": "^0.9.0",
     "mocha": "^2.2.5",
