--- a/package.json
+++ b/package.json
@@ -106,14 +106,14 @@
     "stage": 0
   },
   "eslintConfig": {
-    "parser": "babel-eslint",
     "env": {
       "browser": true
     },
     "extends": [
       "strict",
       "strict-react"
-    ]
+    ],
+    "parser": "babel-eslint"
   },
   "stylelint": {
     "extends": [
@@ -131,44 +131,46 @@
   },
   "devDependencies": {
     "@economist/component-typography": "^1.5.0",
-    "@economist/doc-pack": "^1.0.5",
-    "@economist/provision-react-component": "^1.3.7",
+    "@economist/doc-pack": "^1.0.6",
+    "@economist/provision-react-component": "1.3.9",
     "babel": "^5.8.34",
     "babel-eslint": "^5.0.0",
     "babelify": "^6.4.0",
     "browserify": "^13.0.0",
-    "chai": "^3.4.1",
+    "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
     "eslint": "^2.1.0",
-    "eslint-config-strict": "^8.3.0",
+    "eslint-config-strict": "^8.4.0",
     "eslint-config-strict-react": "^6.0.0",
     "eslint-plugin-filenames": "^0.2.0",
-    "eslint-plugin-react": "^3.11.2",
+    "eslint-plugin-react": "^3.16.1",
     "ghooks": "^1.0.1",
-    "git-directory-deploy": "^1.3.0",
+    "git-directory-deploy": "^1.4.0",
     "hbs-cli": "^1.0.0",
-    "karma": "^0.13.5",
+    "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.1",
-    "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.2.0",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^1.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sauce-launcher": "^0.3.0",
-    "live-server": "^0.9.0",
-    "mocha": "^2.2.5",
-    "npm-assets": "^0.1.0",
-    "npm-run-all": "^1.3.3",
+    "live-server": "^0.9.2",
+    "mocha": "^2.4.5",
+    "npm-assets": "^0.1.1",
+    "npm-run-all": "^1.5.1",
     "npm-watch": "^0.1.1",
-    "postcss-cli": "^2.3.3",
-    "postcss-cssnext": "^2.3.0",
+    "phantomjs-prebuilt": "^2.1.4",
+    "postcss-cli": "^2.5.1",
+    "postcss-cssnext": "^2.4.0",
     "postcss-import": "^8.0.2",
-    "postcss-reporter": "^1.3.0",
-    "postcss-url": "^5.0.2",
-    "react-addons-test-utils": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "postcss-reporter": "^1.3.3",
+    "postcss-url": "^5.1.1",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
     "semantic-release": "^4.3.5",
     "stylelint": "^4.3.5",
     "stylelint-config-strict": "^2.0.0",
-    "validate-commit-msg": "^2.1.0",
+    "validate-commit-msg": "^2.0.0",
     "watchify": "^3.7.0"
   },
   "peerDependencies": {
