--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A balloon that can expose content when an click happens",
   "homepage": "http://github.com/economist-components/component-balloon",
   "bugs": {
-    "url": "https://github.com/economist-components/component-balloon/issues"
+    "url": "http://github.com/economist-components/component-balloon/issues"
   },
   "license": "MIT",
   "author": "The Economist (http://economist.com)",
@@ -132,7 +132,7 @@
   "devDependencies": {
     "@economist/component-typography": "^1.5.0",
     "@economist/doc-pack": "^1.0.6",
-    "@economist/provision-react-component": "1.3.9",
+    "@economist/provision-react-component": "1.4.0",
     "babel": "^5.8.34",
     "babel-eslint": "^5.0.0",
     "babelify": "^6.4.0",
@@ -140,10 +140,10 @@
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
     "eslint": "^2.1.0",
-    "eslint-config-strict": "^8.4.0",
-    "eslint-config-strict-react": "^6.0.0",
+    "eslint-config-strict": "^8.5.0",
+    "eslint-config-strict-react": "^7.0.1",
     "eslint-plugin-filenames": "^0.2.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-react": "^4.1.0",
     "ghooks": "^1.0.1",
     "git-directory-deploy": "^1.4.0",
     "hbs-cli": "^1.0.0",
@@ -169,7 +169,7 @@
     "react-dom": "^0.14.7",
     "semantic-release": "^4.3.5",
     "stylelint": "^4.3.5",
-    "stylelint-config-strict": "^2.0.0",
+    "stylelint-config-strict": "^2.1.0",
     "validate-commit-msg": "^2.0.0",
     "watchify": "^3.7.0"
   },
