--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/:economist-components/component-balloon.git"
+    "url": "git+ssh://git@github.com/economist-components/component-balloon.git"
   },
   "scripts": {
     "access": "npm-run-all --parallel access:*",
