--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
-    "eslint": "^2.1.0",
+    "eslint": "~2.2.0",
     "eslint-config-strict": "^8.5.0",
     "eslint-config-strict-react": "^7.0.1",
     "eslint-plugin-filenames": "^0.2.0",
