--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "npm-run-all --parallel build:*",
     "prebuild:css": "mkdir -p $npm_package_directories_lib",
     "build:css": "cp $npm_package_directories_src/*.css $npm_package_directories_lib",
-    "build:js": "babel $npm_package_directories_src -d $npm_package_directories_lib",
+    "build:js": "babel $npm_package_directories_src -d $npm_package_directories_lib --source-maps inline",
     "ci": "sh ./build.sh",
     "predoc": "mkdir -p $npm_package_directories_site",
     "doc": "npm-run-all --parallel doc:*",
@@ -71,7 +71,7 @@
   "config": {
     "doc": {
       "js": {
-        "options": "-r react -r react-dom -r ./src/example.js:example"
+        "options": "-d -x react/lib/ReactContext -x react/lib/ExecutionEnvironment -r react -r react-dom -r ./src/example.js:example"
       },
       "html": {
         "files": "@economist/doc-pack/templates/index.hbs @economist/doc-pack/templates/standalone.hbs"
@@ -94,7 +94,6 @@
     "compact": false,
     "ignore": "node_modules",
     "loose": "all",
-    "sourceMaps": "inline",
     "stage": 0
   },
   "eslintConfig": {
@@ -123,14 +122,17 @@
   "devDependencies": {
     "@economist/component-typography": "^1.5.0",
     "@economist/doc-pack": "^1.0.6",
-    "@economist/provision-react-component": "1.6.4",
+    "@economist/provision-react-component": "1.7.3",
     "babel": "^5.8.34",
     "babel-eslint": "^5.0.0",
     "babel-polyfill": "^6.6.1",
     "babelify": "^6.4.0",
     "browserify": "^13.0.0",
+    "browserify-istanbul": "^1.0.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.4.1",
     "chai-spies": "^0.7.1",
+    "enzyme": "^2.1.0",
     "eslint": "~2.2.0",
     "eslint-config-strict": "^8.5.0",
     "eslint-config-strict-react": "^8.0.1",
@@ -139,7 +141,10 @@
     "ghooks": "^1.0.3",
     "git-directory-deploy": "^1.5.0",
     "hbs-cli": "^1.0.0",
+    "isparta": "^3.5.3",
     "karma": "^0.13.22",
+    "karma-browserify": "^5.0.2",
+    "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
