--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "prebuild:css": "mkdir -p $npm_package_directories_lib",
     "build:css": "cp $npm_package_directories_src/*.css $npm_package_directories_lib",
     "build:js": "babel $npm_package_directories_src -d $npm_package_directories_lib --source-maps inline",
-    "ci": "sh ./build.sh",
     "predoc": "mkdir -p $npm_package_directories_site",
     "doc": "npm-run-all --parallel doc:*",
     "doc:assets": "npm-assets $npm_package_directories_site",
@@ -57,6 +56,7 @@
     "start": "npm run watch",
     "pretest": "npm run lint && npm run doc",
     "test": "karma start",
+    "posttest": "lcov-result-merger 'coverage/**/lcov.info' | coveralls; true",
     "test:watch": "npm run test:base -- -wR min",
     "watch": "npm-run-all --parallel watch:*",
     "prewatch:doc": "npm run predoc",
@@ -122,7 +122,7 @@
   "devDependencies": {
     "@economist/component-typography": "^3.1.4",
     "@economist/doc-pack": "^1.0.6",
-    "@economist/provision-react-component": "1.7.3",
+    "@economist/provision-react-component": "2.1.0",
     "babel": "^5.8.34",
     "babel-eslint": "^6.0.1",
     "babel-polyfill": "^6.6.1",
@@ -132,6 +132,7 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.4.2",
     "chai-spies": "^0.7.1",
+    "coveralls": "^2.11.9",
     "enzyme": "^2.2.0",
     "eslint": "~2.8.0",
     "eslint-config-strict": "^8.5.1",
@@ -142,6 +143,7 @@
     "git-directory-deploy": "^1.5.0",
     "hbs-cli": "^1.0.0",
     "isparta": "^3.5.3",
+    "istanbul": "^0.4.3",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
     "karma-coverage": "^0.5.5",
@@ -149,6 +151,7 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sauce-launcher": "^0.3.1",
+    "lcov-result-merger": "^1.1.0",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
     "npm-assets": "^0.1.1",
@@ -164,6 +167,7 @@
     "semantic-release": "^4.3.5",
     "stylelint": "^5.4.0",
     "stylelint-config-strict": "^4.0.0",
+    "travis-after-all": "^1.4.4",
     "validate-commit-msg": "^2.5.0",
     "watchify": "^3.7.0"
   }
