--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "access:editorial": "npm access grant read-only economist:economist-editorial $npm_package_name",
     "access:global-logic": "npm access grant read-only economist:global-logic $npm_package_name",
     "access:infographics": "npm access grant read-only economist:infographics $npm_package_name",
-    "access:public": "npm access public $npm_package_name",
-    "access:sudo": "npm access grant read-write economist:read-write-all $npm_package_name",
+    "access:public": "npm access public $npm_package_name || true",
+    "access:sudo": "npm access grant read-write economist:read-write-all $npm_package_name || true",
     "access:yld": "npm access grant read-only economist:yld $npm_package_name",
     "build": "npm-run-all --parallel build:*",
     "prebuild:css": "mkdir -p $npm_package_directories_lib",
@@ -71,7 +71,7 @@
   "config": {
     "doc": {
       "js": {
-        "options": "-d -x react/lib/ReactContext -x react/lib/ExecutionEnvironment -r react -r react-dom -r ./src/example.js:example"
+        "options": "-d -t babelify -x react/addons -x react/lib/ReactContext -x react/lib/ExecutionEnvironment -r react -r react-dom -r ./src/example.js:example"
       },
       "html": {
         "files": "@economist/doc-pack/templates/index.hbs @economist/doc-pack/templates/standalone.hbs"
@@ -85,16 +85,14 @@
       "commit-msg": "validate-commit-msg"
     }
   },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  },
   "babel": {
     "compact": false,
     "ignore": "node_modules",
-    "loose": "all",
-    "stage": 0
+    "presets": [
+      "es2015-loose",
+      "stage-0",
+      "react"
+    ]
   },
   "eslintConfig": {
     "env": {
@@ -112,23 +110,28 @@
     ]
   },
   "dependencies": {
-    "@economist/component-grid": "^1.3.2",
-    "@economist/component-link-button": "^3.0.1",
-    "@economist/component-palette": "^1.4.5",
+    "@economist/component-grid": "^1.3.3",
+    "@economist/component-link-button": "^3.0.3",
+    "@economist/component-palette": "^1.5.1",
     "classnames": "^2.2.3",
-    "react": "^0.14.8",
+    "react": "^0.14.8||^15.0.0",
     "react-click-outside": "^2.1.0"
   },
   "devDependencies": {
-    "@economist/component-typography": "^3.1.4",
-    "@economist/doc-pack": "^1.0.6",
-    "@economist/provision-react-component": "2.1.0",
-    "babel": "^5.8.34",
+    "@economist/component-typography": "^3.1.5",
+    "@economist/doc-pack": "^1.0.7",
+    "@economist/provision-react-component": "3.0.3",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.1",
-    "babel-polyfill": "^6.6.1",
-    "babelify": "^6.4.0",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "browserify-istanbul": "^1.0.0",
+    "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.4.2",
     "chai-spies": "^0.7.1",
@@ -142,7 +145,7 @@
     "ghooks": "^1.2.1",
     "git-directory-deploy": "^1.5.0",
     "hbs-cli": "^1.0.0",
-    "isparta": "^3.5.3",
+    "isparta": "^4.0.0",
     "istanbul": "^0.4.3",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
@@ -158,15 +161,15 @@
     "npm-run-all": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-cli": "^2.5.1",
-    "postcss-cssnext": "^2.5.1",
+    "postcss-cssnext": "^2.5.2",
     "postcss-import": "^8.1.0",
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react-addons-test-utils": "^0.14.8||^15.0.0",
+    "react-dom": "^0.14.8||^15.0.0",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.3.3",
-    "stylelint-config-strict": "^4.0.0",
+    "stylelint-config-strict": "^5.0.0",
     "travis-after-all": "^1.4.4",
     "validate-commit-msg": "^2.6.1",
     "watchify": "^3.7.0"
