--- a/package.json
+++ b/package.json
@@ -110,12 +110,16 @@
     ]
   },
   "dependencies": {
-    "@economist/component-grid": "^1.3.3",
-    "@economist/component-link-button": "^3.0.3",
-    "@economist/component-palette": "^1.5.1",
+    "@economist/component-grid": "^1.4.0",
+    "@economist/component-link-button": "^3.1.0",
+    "@economist/component-palette": "^1.11.0",
     "classnames": "^2.2.3",
-    "react": "^0.14.8||^15.0.0",
+    "prop-types": "^15.6.0",
     "react-click-outside": "^2.1.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.8||^15.0.0||^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "@economist/component-typography": "^3.1.5",
@@ -133,10 +137,11 @@
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
+    "chai-enzyme": "^1.0.0-beta.0",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.9",
-    "enzyme": "^2.2.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "~2.10.1",
     "eslint-config-strict": "^8.5.1",
     "eslint-config-strict-react": "^8.0.1",
@@ -165,8 +170,8 @@
     "postcss-import": "^8.1.0",
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "^0.14.8||^15.0.0",
-    "react-dom": "^0.14.8||^15.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.3.3",
     "stylelint-config-strict": "^5.0.0",
